--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-ecdsa==0.13
-requests==2.18.4
-flask==1.0.2
-flask-limiter==1.0.1
-pycrypto==2.6.1
-base58==1.0.0
-ipaddress==1.0.17
-flask-cors==3.0.6
-psutil==5.4.7
+ecdsa>=0.13
+requests>=2.18.4
+flask>=1.0.2
+flask-limiter>=1.0.1
+pycrypto>=2.6.1
+base58>=1.0.0
+ipaddress>=1.0.17
+flask-cors>=3.0.6
+psutil>=5.4.7
